# half-hour

./: LICENSE  README.md  pyproject.toml
src/half_hour.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/hh/: __init__.py
